--- a/src/Components/Authentication/Signin/Signin.css
+++ b/src/Components/Authentication/Signin/Signin.css
@@ -1,192 +1,4 @@
-.error {
-    color: red;
-    font-size: 12px;
-  }
-  .form-card {
-    border: 1px solid #ebdfdf;
-    width: 500px;
-    margin: 100px auto;
-    padding: 50px;
-    border-radius: 15px;
-    text-align: center;
-  }
-  .login-btn {
-    border: 1px solid #ebdfdf;
-    background-color: transparent;
-    padding: 5px 20px;
-    border-radius: 50px;
-    width: 100%;
-    margin-bottom: 20px;
-    position: relative;
-    cursor: pointer;
-  }
-  button.login-btn:hover {
-    border: 1px solid #4f46e5;
-  }
-  button.login-btn span {
-    position: absolute;
-    left: 20px;
-    color: #4f46e5;
-  }
-  .form-control {
-    display: block;
-    width: 100%;
-    height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
-  .form-card .form-control {
-    margin-bottom: 30px;
-  }
-  .login-heading {
-    font-weight: 700;
-    padding-bottom: 20px;
-    color: #4f46e5;
-    font-size: 1.75rem;
-  }
-  .social-login h4 {
-    font-weight: 700;
-    color: #4f46e5;
-  }
-  .savingPassword {
-    padding-bottom: 20px;
-  }
-  .submit-button {
-    background-color: #4f46e5;
-    border: 1px soild #4f46e5 !important;
-    border-color: #4f46e5 !important;
-    padding: 8px 20px;
-    font-weight: 500;
-    width: 100%;
-    color: #fff;
-    margin-bottom: 15px;
-    cursor: pointer;
-  }
-  @media (min-width: 320px) and (max-width: 767px) {
-    .form-card {
-      width: 100% !important;
-      padding: 20px 30px;
-      margin: 50px auto;
-    }
-  }
-  
-  .login-container {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    background: linear-gradient(#141e30, #243b55);
-    height: 700px;
-  }
-  
-  .login-box {
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-  }
-  .login-box2 {
-    width: 400px;
-    padding: 40px;
-    background: #fff;
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-  }
-  .login-box h2 {
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-  }
-  .login-box2 h2 {
-    padding: 0;
-    color: #dd2400;
-    text-align: center;
-    font-size: 22px;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding-bottom: 40px;
-  }
-  .login-box .user-box,
-  .login-box2 .user-box {
-    position: relative;
-    margin-bottom: 10px;
-  }
-  
-  .login-box .user-box input,
-  .login-box2 .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    margin-bottom: 30px;
-    border: 1px solid #fff;
-    outline: none;
-    border-radius: 10px;
-  }
-  .login-box .user-box label,
-  .login-box2 .user-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #000;
-    pointer-events: none;
-    transition: 0.5s;
-    font-weight: 600;
-  }
-  
-  .login-box .user-box input:focus ~ label,
-  .login-box2 .user-box input:focus ~ label {
-    top: -35px;
-    left: 0;
-    color: #000;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  .login-box .user-box input:valid ~ label,
-  .login-box2 .user-box input:valid ~ label {
-    top: -35px;
-    left: 0;
-    color: #000;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  
-  .login-btn {
-    background-color: #03e8f400;
-    border: 1px solid #dd2400;
-    border-radius: 10px;
-    padding: 8px 20px;
-    width: 100%;
-    color: #dd2400;
-    font-weight: 700;
-    margin-bottom: 15px;
-    cursor: pointer;
-  }
-  .login-btn:hover {
-    background-color: #03e8f4;
-    color: black;
-    border: 1px solid #dd2400;
-    transition: all 0.5s;
-  }
-  
-  .login-box form .submitBtnAnimation,
-  .login-box2 form .submitBtnAnimation {
+ .submitBtnAnimation {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -202,21 +14,16 @@
     cursor: pointer;
   }
   
-  .login-box .submitBtnAnimation:hover,
-  .login-box2 .submitBtnAnimation:hover {
+  .submitBtnAnimation:hover {
     background: #dd25002c;
     color: #dd2400;
     border-radius: 5px;
   }
-  
-  .login-box .btnAnimation,
-  .login-box2 .btnAnimation {
+  .btnAnimation {
     position: absolute;
     display: block;
   }
-  
-  .login-box .btnAnimation:nth-child(1),
-  .login-box2 .btnAnimation:nth-child(1) {
+  .btnAnimation:nth-child(1) {
     top: 0;
     left: -100%;
     width: 100%;
@@ -235,8 +42,7 @@
     }
   }
   
-  .login-box .btnAnimation:nth-child(2),
-  .login-box2 .btnAnimation:nth-child(2) {
+  .btnAnimation:nth-child(2) {
     top: -100%;
     right: 0;
     width: 2px;
@@ -256,8 +62,7 @@
     }
   }
   
-  .login-box .btnAnimation:nth-child(3),
-  .login-box2 .btnAnimation:nth-child(3) {
+  .btnAnimation:nth-child(3) {
     bottom: 0;
     right: -100%;
     width: 100%;
@@ -277,8 +82,7 @@
     }
   }
   
-  .login-box .btnAnimation:nth-child(4),
-  .login-box2 .btnAnimation:nth-child(4) {
+  .btnAnimation:nth-child(4) {
     bottom: -100%;
     left: 0;
     width: 2px;
